--- a/a.html
+++ b/a.html
@@ -44,7 +44,7 @@
           >Naznin Sultana,</a
         >
         and is
-        <a href="https://github.com/naznin07/App" target="_blank">
+        <a href="https://github.com/naznin07/App/tree/World-Clock" target="_blank">
           open-sourced on GitHub</a
         >
         and
