--- a/a.html
+++ b/a.html
@@ -3,12 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
-    <link rel="stylesheet" href="style.css" />
-
-    <style></style>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <title>AI English Poem Generator</title>
   </head>
   <body>
-    <h1>Hello Git</h1>
+    <div class="container">
+      <header>
+        <h1>AI English Poem Generator</h1>
+      </header>
+
+      <main>
+        <div class="form-container">
+          <form id="poem-generator-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of a English poem"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="hint">i.e: Flower, Paris or Cheese</div>
+        </div>
+        <div class="poem hidden" id="poem"></div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/naznin07" target="_blank"
+          >Naznin Sultana,</a
+        >
+        and is
+        <a
+          href="https://github.com/naznin07/App/tree/AI-generator"
+          target="_blank"
+        >
+          open-sourced on GitHub</a
+        >
+        and
+        <a
+          href="https://app.netlify.com/teams/naffect1/overview"
+          target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
