--- a/a.html
+++ b/a.html
@@ -19,7 +19,7 @@
           <form id="poem-generator-form">
             <input
               type="text"
-              placeholder="Enter the topic of a English poem"
+              placeholder="Enter the topic of an English poem"
               autofocus
               required
               autocomplete="off"
