--- a/a.html
+++ b/a.html
@@ -46,7 +46,7 @@
         >
         and
         <a
-          href="https://app.netlify.com/teams/naffect1/overview"
+          href="https://projectnetlifyapp1.netlify.app"
           target="_blank"
           >hosted on Netlify</a
         >
